Changed color of Pace(Loading bar at header top) to RED and 3px thick

--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -2906,12 +2906,12 @@ Component: timeline
   }
 }
 .pace .pace-progress {
-  background: #00c0ef;
+  background: #f56954;
   position: fixed;
   z-index: 2000;
   top: 0;
   left: 0;
-  height: 2px;
+  height: 3px;
   -webkit-transition: width 1s;
   -moz-transition: width 1s;
   -o-transition: width 1s;
